# methylation-pipeline

./: .dockstore.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  package.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: build-anvil-image.yml  build-image.yml
.streamlit/: config.toml
anvil/: Dockerfile  README.md
app/: anvil.py  bcm.py  branding.py  file_picker.py  jupyter_proxy.py  launch.py  remote.py  state.py  streamlit_app.py
app/pages/: 0_AnVIL_Data.py  0_Remote_Data.py  1_Setup.py  2_Regions.py  3_Thresholds.py  4_Run.py  5_Results.py
core/: __init__.py  analysis.py  annotations.py  bam_index.py  bedmethyl.py  chromosomes.py  cli.py  config.py  dmr.py  figures.py  pileup.py  pipeline.py  plotting.py  profile.py  qc.py  reads.py  reasoning.py  references.py  reporting.py  segments.py  subprocess_util.py  targeted.py  thresholds.py
src/penetrance/: __init__.py  cli.py  pipeline.py  validation.py
src/penetrance/adapters/: __init__.py  base.py  clinvar_gnomad.py  literature.py
src/penetrance/data/: genes.csv  variants.csv
src/penetrance/features/: __init__.py  matrix.py  mechanism.py
src/penetrance/gene_model/: __init__.py  cv.py  model.py  prior.py
src/penetrance/labels/: __init__.py  loader.py
src/penetrance/variant/: __init__.py  betabinom.py  casecontrol.py  estimator.py  maxaf.py
tests/: test_adapters.py  test_analysis.py  test_anvil.py  test_bcm.py  test_bedmethyl.py  test_branding.py  test_chromosomes.py  test_cli.py  test_config.py  test_core.py  test_figures.py  test_file_picker.py  test_gene_model.py  test_mn_tags.py  test_pages_smoke.py  test_pipeline_logic.py  test_pipeline_validation.py  test_profile.py  test_references.py  test_remote.py  test_reporting.py  test_targeted.py  test_targeted_empty.py  test_variant_layer.py
wdl/: Dockerfile  README.md  inputs.ont.template.json  inputs.pacbio.template.json  inputs.template.json  mango_ont.wdl  mango_pacbio.wdl  mango_run_task.wdl  mango_trio.wdl
