[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "methyl-trio"
version = "0.1.0"
description = "MANGO — Methylation Analysis for Novel Genomic Outcomes: offline three-sample nanopore methylation DMR analysis"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "paramiko>=3.4",
  "plotly>=5.20",
  "pysam>=0.22",
  "scipy>=1.14",
  "streamlit>=1.37",
]

[project.optional-dependencies]
test = ["pytest>=8.3"]

[project.scripts]
methyl-trio = "app.launch:main"

# Surfaces MANGO in the Jupyter Launcher and proxies it at .../proxy/mango/ when
# running inside an AnVIL / Terra Cloud Environment (needs jupyter-server-proxy).
[project.entry-points.jupyter_serverproxy_servers]
mango = "app.jupyter_proxy:launch"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*", "core*"]
exclude = ["annotations*", "runs*", "tests*"]
namespaces = true
